--- a/style.css
+++ b/style.css
@@ -1,8 +1,27 @@
+    
 body
 {
-
+    background-color: #08B0C1;
+    text-align: center;
+    line-height: 100vh;
+    margin:0;
 }
-button{
+
+button
+{
+    
     font-family: Verdana, Verdana, Geneva, Tahoma, sans-serif;
     font-weight: bold;
+    vertical-align: middle;
+    width:80px;
+    height:400px;
+    background-color: #ffffff;
+    color: #0000; 
+}
+
+button.sharp{
+    width:50px;
+    background-color: #000;
+    color: #fff; 
+    
 }
